# src_layout

./: README.md  pyproject.toml  tox.ini
src/: main.py
tests/: test_main.py
